<resources>
    <string name="app_name">covoiturage</string>
    <string name="login_name_user">login for user</string>
    <string name="login_name_driver">login for driver</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">sign in</string>
    <string name="register">Register</string>
    <string name="hello_inyour_application">hello to your application</string>
    <string name="terms_and_privacy">terms_and_privacy</string>
    <string name="return_back">return back</string>
    <string name="empty" />
    <string name="terms">i read and accept the term of use and privacy</string>
    <string name="signup">signup</string>
</resources>
