<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent" android:background="@color/nice"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar

        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"

        >

        <ImageButton
            android:id="@+id/terms_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/trasparent"
            android:contentDescription="@string/return_back"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/empty"
            android:fontFamily="casual"
            android:text="@string/hello_inyour_application"
            android:textColor="@color/nice"
            android:textColorHighlight="@color/white"
            android:textSize="18sp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/edit_text_design"
            >

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="380dp"
                android:text="@string/terms_and_privacy"
                android:textSize="24sp"

                />
        </LinearLayout>
    </ScrollView>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="30dp"
        android:text="@string/terms" />

    <Button
        android:id="@+id/terms_next"

        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="60dp"
        android:layout_marginBottom=""

        android:background="@drawable/edit_text_design"
        android:backgroundTint="@color/design_default_color_primary"
        android:padding="12dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/nice"
        android:textSize="18sp"
        app:iconPadding="30dp" />

</LinearLayout>